[project]
dependencies = [
    "cloud-files>=4.27.0",
    "minniemorpho",
    "nglui>=3.4.0",
    "numpy>=1.26.4",
    "seaborn>=0.13.2",
    "task-queue>=2.14.0",
]
description = "Add your description here"
name = "vasculature-features"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[tool.uv.sources]
minniemorpho = { git = "https://github.com/bdpedigo/minniemorpho", rev = "2e922c0" }

# [tool.hatch.build.targets.wheel.sources]
